--- a/panel.html
+++ b/panel.html
@@ -14,7 +14,14 @@
                 <img src="https://files.catbox.moe/hrtpys.jpg" alt="WALZSHOP Icon" class="logo-icon">
                 <h1 class="website-name">WALZSHOP</h1>
             </a>
-            <a href="#" class="header-link"><i class="fas fa-user-circle"></i></a>
+            <div class="header-right">
+                <a href="#" class="header-link">
+                    <i class="fas fa-search"></i>
+                </a>
+                <a href="#" class="header-link">
+                    <i class="fas fa-user"></i>
+                </a>
+            </div>
         </header>
 
         <main style="margin-top: 20px;">
@@ -81,18 +88,29 @@
             <button id="panel-order-button" class="confirm-button">Konfirmasi Pesanan via WhatsApp</button>
         </main>
 
-        <footer class="footer">
+        <footer class="main-footer">
+            <div class="footer-links-group">
+                <a href="index.html">
+                    <i class="fas fa-gem"></i>
+                    <span>Top Up</span>
+                </a>
+                <a href="pulsa.html">
+                    <i class="fas fa-mobile-alt"></i>
+                    <span>Pulsa</span>
+                </a>
+                <a href="panel.html">
+                    <i class="fas fa-server"></i>
+                    <span>Panel</span>
+                </a>
+            </div>
             <div class="footer-socials">
                 <a href="https://www.facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
                 <a href="https://www.instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                 <a href="https://t.me/walzshopid" target="_blank" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
             </div>
-            <ul class="footer-links">
-                <li><a href="#">Tentang Kami</a></li>
-                <li><a href="#">Kebijakan Privasi</a></li>
-                <li><a href="#">Syarat & Ketentuan</a></li>
-            </ul>
-            <p>&copy; 2024 WALZSHOP. Hak Cipta Dilindungi.</p>
+            <div class="footer-copyright">
+                © 2024 WALZSHOP. All Rights Reserved.
+            </div>
         </footer>
     </div>
     
