--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
                 <h1 class="website-name">WALZSHOP</h1>
             </a>
             <div class="header-right">
-                <a href="#" class="header-link">
-                    <i class="fas fa-search"></i>
-                </a>
-                <a href="#" class="header-link">
-                    <i class="fas fa-user"></i>
-                </a>
+                <div class="search-box">
+                    <input type="text" id="game-search" placeholder="Cari Game...">
+                    <i class="fas fa-search search-icon"></i>
+                </div>
             </div>
         </header>
 
