--- a/panel.html
+++ b/panel.html
@@ -3,117 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panel Pterodactyl - WALZSHOP</title>
+    <title>WALZSHOP - Beli Panel</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+
     <div class="main-container">
         <header class="header">
             <a href="index.html" class="logo-link">
                 <img src="https://files.catbox.moe/hrtpys.jpg" alt="WALZSHOP Icon" class="logo-icon">
                 <h1 class="website-name">WALZSHOP</h1>
             </a>
-            <div class="header-right">
-                <a href="#" class="header-link">
-                    <i class="fas fa-search"></i>
-                </a>
-                <a href="#" class="header-link">
-                    <i class="fas fa-user"></i>
-                </a>
-            </div>
         </header>
 
-        <main style="margin-top: 20px;">
-            <a href="javascript:history.back()" class="back-button-top" style="margin-bottom: 20px;"><i class="fas fa-arrow-left"></i> Kembali</a>
-            
-            <div id="panel-info-header" class="game-info-header">
-                <img src="https://files.catbox.moe/k37o65.png" alt="Icon Panel" class="game-img">
-                <h2>Panel Pterodactyl</h2>
-                <div class="game-info-details">
-                    <div class="game-detail-item">
-                        <i class="fas fa-shield-alt"></i>
-                        <p>Transaksi Aman</p>
-                    </div>
-                    <div class="game-detail-item">
-                        <i class="fas fa-tachometer-alt"></i>
-                        <p>Instan & Cepat</p>
-                    </div>
-                </div>
-            </div>
+        <a href="index.html" class="back-button-top">
+            <i class="fas fa-arrow-left"></i> Kembali ke Beranda
+        </a>
 
-            <div class="section-card">
+        <main id="panel-form">
+            <section class="section-card">
                 <div class="section-header">
-                    <div class="section-number">1</div>
-                    <h3>Lengkapi Data Anda</h3>
-                </div>
-                <div class="section-description">
-                    Masukkan nama dan nomor WhatsApp Anda untuk pemesanan.
+                    <span class="section-number">1</span>
+                    <h3>Masukkan Data Anda</h3>
                 </div>
                 <div class="input-group">
                     <i class="fas fa-user input-icon"></i>
-                    <input type="text" id="user-name" placeholder="Masukkan Nama Anda">
+                    <input type="text" id="user-name" placeholder="Nama Lengkap">
                 </div>
                 <div class="input-group">
                     <i class="fab fa-whatsapp input-icon"></i>
-                    <input type="tel" id="user-whatsapp" placeholder="Masukkan Nomor WhatsApp Aktif">
+                    <input type="number" id="user-whatsapp" placeholder="Nomor WhatsApp">
                 </div>
-            </div>
+            </section>
 
-            <div class="section-card">
+            <section class="section-card">
                 <div class="section-header">
-                    <div class="section-number">2</div>
+                    <span class="section-number">2</span>
                     <h3>Pilih Paket Panel</h3>
                 </div>
-                <div class="section-description">
-                    Pilih paket RAM yang sesuai dengan kebutuhan Anda.
-                </div>
                 <div id="panel-product-list" class="options-grid">
-                    <div class="option-card" data-name="RAM 1 GB" data-price="1000"><p class="label">RAM 1 GB</p><p class="price">Rp 1.000</p></div>
-                    <div class="option-card" data-name="RAM 2 GB" data-price="2000"><p class="label">RAM 2 GB</p><p class="price">Rp 2.000</p></div>
-                    <div class="option-card" data-name="RAM 3 GB" data-price="3000"><p class="label">RAM 3 GB</p><p class="price">Rp 3.000</p></div>
-                    <div class="option-card" data-name="RAM 4 GB" data-price="4000"><p class="label">RAM 4 GB</p><p class="price">Rp 4.000</p></div>
-                    <div class="option-card" data-name="RAM 5 GB" data-price="5000"><p class="label">RAM 5 GB</p><p class="price">Rp 5.000</p></div>
-                    <div class="option-card" data-name="RAM 6 GB" data-price="6000"><p class="label">RAM 6 GB</p><p class="price">Rp 6.000</p></div>
-                    <div class="option-card" data-name="RAM 7 GB" data-price="7000"><p class="label">RAM 7 GB</p><p class="price">Rp 7.000</p></div>
-                    <div class="option-card" data-name="RAM 8 GB" data-price="8000"><p class="label">RAM 8 GB</p><p class="price">Rp 8.000</p></div>
-                    <div class="option-card" data-name="RAM 9 GB" data-price="9000"><p class="label">RAM 9 GB</p><p class="price">Rp 9.000</p></div>
-                    <div class="option-card" data-name="RAM 10 GB" data-price="10000"><p class="label">RAM 10 GB</p><p class="price">Rp 10.000</p></div>
-                    <div class="option-card" data-name="RAM Unlimited" data-price="10500">
-                        <p class="label">RAM Unlimited</p><p class="price">Rp 10.500</p>
                     </div>
-                </div>
-            </div>
+            </section>
 
-            <button id="panel-order-button" class="confirm-button">Konfirmasi Pesanan via WhatsApp</button>
+            <button id="panel-order-button" class="confirm-button" disabled>Pesan Sekarang</button>
         </main>
-
-        <footer class="main-footer">
-            <div class="footer-links-group">
-                <a href="index.html">
-                    <i class="fas fa-gem"></i>
-                    <span>Top Up</span>
-                </a>
-                <a href="pulsa.html">
-                    <i class="fas fa-mobile-alt"></i>
-                    <span>Pulsa</span>
-                </a>
-                <a href="panel.html">
-                    <i class="fas fa-server"></i>
-                    <span>Panel</span>
-                </a>
-            </div>
-            <div class="footer-socials">
-                <a href="https://www.facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="https://t.me/walzshopid" target="_blank" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
-            </div>
-            <div class="footer-copyright">
-                © 2024 WALZSHOP. All Rights Reserved.
-            </div>
-        </footer>
     </div>
-    
+
+    <footer class="main-footer">
+        <div class="footer-links-group">
+            <a href="index.html">
+                <i class="fas fa-gem"></i>
+                <span>Top Up</span>
+            </a>
+            <a href="pulsa.html">
+                <i class="fas fa-mobile-alt"></i>
+                <span>Pulsa</span>
+            </a>
+            <a href="panel.html">
+                <i class="fas fa-server"></i>
+                <span>Panel</span>
+            </a>
+        </div>
+    </footer>
+
     <div class="notification-container"></div>
     <script src="script.js"></script>
 </body>
