--- a/cart.html
+++ b/cart.html
@@ -3,43 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keranjang Belanja</title>
+    <title>WALZSHOP - Rincian Pesanan</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
-    <div class="main-container cart-page-container">
+    <div class="main-container">
         <header class="header">
             <a href="index.html" class="logo-link">
                 <img src="https://files.catbox.moe/hrtpys.jpg" alt="WALZSHOP Icon" class="logo-icon">
                 <h1 class="website-name">WALZSHOP</h1>
             </a>
-            <div class="header-right">
-                <a href="#" class="header-link">
-                    <i class="fas fa-search"></i>
-                </a>
-                <a href="#" class="header-link">
-                    <i class="fas fa-user"></i>
-                </a>
-            </div>
         </header>
 
-        <main class="cart-main">
-            <a href="javascript:history.back()" class="back-button-top" style="margin-bottom: 20px;"><i class="fas fa-arrow-left"></i> Kembali</a>
+        <a href="index.html" class="back-button-top">
+            <i class="fas fa-arrow-left"></i> Kembali ke Beranda
+        </a>
 
-            <div id="cart-summary-card" class="cart-summary-card">
-                </div>
+        <main class="cart-page-container">
+            <section class="section-card cart-summary-card" id="cart-summary-card">
+                </section>
+
+            <section class="payment-info-section" id="payment-info-section">
+                </section>
             
-            <div id="payment-info-section" class="payment-info-section">
-                </div>
-
-            <button type="button" id="pay-button" class="confirm-button">Bayar Sekarang</button>
-
+            <button id="pay-button" class="confirm-button">Bayar Sekarang</button>
         </main>
     </div>
-    
+
     <footer class="main-footer">
         <div class="footer-links-group">
             <a href="index.html">
@@ -54,14 +47,6 @@
                 <i class="fas fa-server"></i>
                 <span>Panel</span>
             </a>
-        </div>
-        <div class="footer-socials">
-            <a href="https://www.facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-            <a href="https://www.instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://t.me/walzshopid" target="_blank" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
-        </div>
-        <div class="footer-copyright">
-            © 2024 WALZSHOP. All Rights Reserved.
         </div>
     </footer>
 
