--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                     <input type="text" id="game-search" placeholder="Cari Game...">
                     <i class="fas fa-search search-icon"></i>
                 </div>
+                <button id="theme-toggle" class="theme-toggle-btn">
+                    <i class="fas fa-sun"></i>
+                </button>
             </div>
         </header>
 
