--- a/pulsa.html
+++ b/pulsa.html
@@ -16,6 +16,11 @@
                 <img src="https://files.catbox.moe/hrtpys.jpg" alt="WALZSHOP Icon" class="logo-icon">
                 <h1 class="website-name">WALZSHOP</h1>
             </a>
+            <div class="header-right">
+                <button id="theme-toggle" class="theme-toggle-btn">
+                    <i class="fas fa-sun"></i>
+                </button>
+            </div>
         </header>
 
         <a href="index.html" class="back-button-top">
@@ -46,7 +51,7 @@
                     <h3>Pilih Nominal Pulsa</h3>
                 </div>
                 <div id="pulsa-list" class="options-grid">
-                    </div>
+                </div>
             </section>
 
             <section class="section-card">
@@ -55,7 +60,7 @@
                     <h3>Pilih Metode Pembayaran</h3>
                 </div>
                 <div id="payment-list" class="options-grid">
-                    </div>
+                </div>
             </section>
         </main>
 
