--- a/panel.html
+++ b/panel.html
@@ -16,6 +16,11 @@
                 <img src="https://files.catbox.moe/hrtpys.jpg" alt="WALZSHOP Icon" class="logo-icon">
                 <h1 class="website-name">WALZSHOP</h1>
             </a>
+            <div class="header-right">
+                <button id="theme-toggle" class="theme-toggle-btn">
+                    <i class="fas fa-sun"></i>
+                </button>
+            </div>
         </header>
 
         <a href="index.html" class="back-button-top">
@@ -44,7 +49,7 @@
                     <h3>Pilih Paket Panel</h3>
                 </div>
                 <div id="panel-product-list" class="options-grid">
-                    </div>
+                </div>
             </section>
 
             <button id="panel-order-button" class="confirm-button" disabled>Pesan Sekarang</button>
