--- a/cart.html
+++ b/cart.html
@@ -16,6 +16,11 @@
                 <img src="https://files.catbox.moe/hrtpys.jpg" alt="WALZSHOP Icon" class="logo-icon">
                 <h1 class="website-name">WALZSHOP</h1>
             </a>
+            <div class="header-right">
+                <button id="theme-toggle" class="theme-toggle-btn">
+                    <i class="fas fa-sun"></i>
+                </button>
+            </div>
         </header>
 
         <a href="index.html" class="back-button-top">
@@ -24,10 +29,10 @@
 
         <main class="cart-page-container">
             <section class="section-card cart-summary-card" id="cart-summary-card">
-                </section>
+            </section>
 
             <section class="payment-info-section" id="payment-info-section">
-                </section>
+            </section>
             
             <button id="pay-button" class="confirm-button">Bayar Sekarang</button>
         </main>
