--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         </header>
 
         <main class="game-selection-main">
+            <section class="section-card guidance-card">
+                <h3>Selamat Datang di WALZSHOP!</h3>
+                <p>Pilih game favoritmu di bawah ini untuk memulai top up. Kami menawarkan layanan top up yang aman, cepat, dan terpercaya.</p>
+            </section>
             <section class="section-card featured-section">
                 <div class="section-header">
                     <h2 class="section-title">Pilih Game Favoritmu</h2>
