--- a/cart.html
+++ b/cart.html
@@ -29,33 +29,25 @@
 
         <main class="cart-page-container">
             <section class="section-card cart-summary-card" id="cart-summary-card">
-            </section>
+                </section>
 
             <section class="payment-info-section" id="payment-info-section">
-            </section>
-            
+                </section>
+
             <button id="pay-button" class="confirm-button">Bayar Sekarang</button>
         </main>
     </div>
 
     <footer class="main-footer">
         <div class="footer-links-group">
-            <a href="index.html">
-                <i class="fas fa-gem"></i>
-                <span>Top Up</span>
-            </a>
-            <a href="pulsa.html">
-                <i class="fas fa-mobile-alt"></i>
-                <span>Pulsa</span>
-            </a>
-            <a href="panel.html">
-                <i class="fas fa-server"></i>
-                <span>Panel</span>
-            </a>
+            <a href="index.html"><i class="fas fa-gem"></i><span>Top Up</span></a>
+            <a href="pulsa.html"><i class="fas fa-mobile-alt"></i><span>Pulsa</span></a>
+            <a href="panel.html"><i class="fas fa-server"></i><span>Panel</span></a>
         </div>
     </footer>
 
     <div class="notification-container"></div>
+    
     <script src="script.js"></script>
 </body>
 </html>
